# latin-scan-ebm

./: .gitignore  README.md  pedecerto-raw  pyproject.toml
docs/: ceiling-progression.md  project-summary.md
docs/superpowers/plans/: 2026-05-11-ceiling-raise.md  2026-05-12-accuracy-raise.md
results/: baseline_ceiling.tsv  phase2_ceiling.tsv  phase3_ceiling.tsv  phase4_ceiling.tsv  phase5_ceiling.tsv  phase6_ceiling.tsv
scripts/: analyze_errors.py  analyze_failures.py  check_training_data.py  compare_anceps.py  coverage_analysis.py  crf_baseline.py  diagnose_ceiling.py  ensemble_anceps_ebm.py  list_features.py  measure_ceiling_split.py  probe_embeddings.py  profile_pipeline.py  run_full_eval.sh  run_lobo.sh  scan_line.py  summarize_ceiling.py  train_v1.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py
src/latin_ebm/: __init__.py  atomize.py  encoder.py  energy.py  energy_neural.py  enumerate.py  evaluate.py  features.py  features_v2.py  io.py  lexicon.py  meters.py  mlp.py  normalize.py  proposal.py  realize.py  train.py  types.py
src/latin_ebm/corpus/: __init__.py  pedecerto.py
tests/: conftest.py  test_atomize.py  test_encoder.py  test_energy_neural.py  test_enumerate.py  test_features_v2.py  test_io.py  test_lexicon.py  test_meters.py  test_normalize.py  test_pedecerto.py  test_proposal.py  test_realize.py  test_types.py
